--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.2.1
+  firebase_auth: ^3.4.1
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  rxdart: ^0.27.4
+  meta: ^1.7.0
 
 dev_dependencies:
   flutter_test:
